[project]
name = "work-wrap"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "holidays>=0.46",
    "openpyxl>=3.1",
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "pywin32>=306; sys_platform == 'win32'",  # Excel VBAマクロ呼び出し（Windows のみ）
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
